refactor 压缩与解压缩功能与文件系统解耦，单独抽出一个服务